Java Marine API - changelog
<http://ktuukkan.github.io/marine-api/>

Version 0.11.0-SNAPSHOT

  - Support for $STALK sentences; the NMEA layer of Raymarine SeaTalk protocol.
  - RPMSentence; added missing RPM setter
  - ROTSentence; negative rate of turn values are now allowed. Also, the value
    may now exceed -/+360 degrees.
  - Support for GST sentences; GPS Pseudorange Noise Statistics
  - AbstracSentenceListener; improvements in generic types resolving to support
    more advanced use of generics and inheritance.

  Contributions:
  - GST parser written by Tero Laitinen (@tlaitinen)
  - AbstractSentenceListener improvements by Axel Uhl (@axeluhl)

Version 0.10.0 (2017-06-21)

  - Preliminary support for AIS (Automatic Identification System)
    - Support for VDM and VDO sentences; the NMEA-0183 layer of AIS messages
    - decoding of messages 1, 2, 3, 4, 5, 9, 18, 19, 21 and 24
    - listener intefaces and classes for receiving messages
    - TalkerId enum; added AD, AN, AR, AS, AT, AX an SA to support AIS talkers
    - utility classes for extracted data
  - Support for MHU sentences; relative and absolute humidity with dew point.
  - Support for MMB sentences; barometric pressure.
  - Support for CUR sentences; Water currents information.
  - Support for VWR sentences; Relative wind speed and angle.
  - Support for VWT sentences; True wind speed and angle.
  - Support for GNS sentences; GNSS fix data.
  - SentenceReader performance improvements. Removed read interval and related
    methods, i.e. incoming data is now read immediately.
  - PositionProvider may now use VTG sentence to acquire needed values.
  - MWDSentence; fixed missing base interface, incorrect field count and knots indicator char.
  - Added missing setSatelliteCount() in GGASentence
  - Added precise mode in FaaMode enum ('P')
  - TalkerId; added OC to support OpenPlotter (sailoog.com)

  Contributions: