@@ -288,6 +288,7 @@ public final class SentenceFactory {
 		registerParser("RTE", RTEParser.class);
 		registerParser("RSA", RSAParser.class);
 		registerParser("TTM", TTMParser.class);
+		registerParser("TXT", TXTParser.class);
 		registerParser("VBW", VBWParser.class);
 		registerParser("VDM", VDMParser.class);
 		registerParser("VDO", VDOParser.class);
